@@ -15,6 +15,7 @@ Bugfixes:
   match result code of FCS/FMS
 - RTMPT through Jetty working again (Trac #213)
 - size of last frame is correctly written to .flv files
+- errors during "connect" are reported back to client through RTMPT
 
 
 Red5 0.6rc1 (2006-10-30)
